# rapidport.ro

./: .env.example  .gitignore  CLAUDE.md  CODING.md  ONSTART.md  SECURITY_REVIEWER.md  SPEC.md  TESTING.md  docker-compose.yml
app/: components.json  drizzle.config.ts  error.vue  nuxt.config.ts  package-lock.json  package.json
app/assets/css/: tailwind.css
app/components/layout/: ConfirmDialog.vue  LegalPage.vue  SiteFooter.vue  SiteHeader.vue
app/drizzle/: 0000_steady_malcolm_colcord.sql  0001_nebulous_malcolm_colcord.sql  0002_bouncy_star_brand.sql  0003_slow_lyja.sql  0004_tricky_madelyne_pryor.sql  0005_perfect_madame_masque.sql  0006_huge_gressill.sql  0007_chunky_santa_claus.sql  0008_glossy_jackpot.sql
app/drizzle/meta/: 0000_snapshot.json  (+9 more)
app/layouts/: admin.vue
app/pages/: index.vue  login.vue  profiles.vue  upload.vue  verify.vue
app/plugins/: cookie-consent.client.ts
app/theme/: index.ts  types.ts
app/types/: nuxt-app.d.ts
docs/: ARCHITECTURE.md  LOG.md  adr-001-code-mapping.md  emails-copy.md  questions-for-dani.md  saga-rejections.md  saga-schemas.md  winmentor-tables.md
jobs/: HANDOFF.md  INDEX.md  NEXT-AGENT-PROMPT.md
jobs/api-auto-direction/: DONE-accept-auto.md  PLAN-accept-auto.md
jobs/configurable-data-root/: DONE-env-var.md
jobs/fix-status-null-progress/: DONE-fixes.md
jobs/fix-upload-413-ratelimit/: DONE-fixes.md
jobs/fix-upload-size-limit/: DONE-raise-cap.md
jobs/fix-upload-wire/: DONE-ui-wire-button.md
jobs/phase0-discovery/: DONE-code-mapping-adr.md  DONE-phase0-gate.md  DONE-saga-import-schema.md  DONE-table-inventory.md  DONE-winmentor-sample.md  GATE.md  JOB.md  REQUIREMENTS.md  code-mapping-adr.md  phase0-gate.md  saga-import-schema.md  table-inventory.md  winmentor-sample.md
jobs/phase1-worker/: DONE-bootstrap-db-minimal.md  DONE-bootstrap-dockerfile.md  DONE-bootstrap-pyproject.md  DONE-bootstrap-structlog.md  DONE-canonical-article.md  DONE-canonical-journal.md  DONE-canonical-partner.md  DONE-canonical-support.md  DONE-cli-queue-archive-extractor.md  DONE-cli-queue-cli.md  DONE-cli-queue-consumer.md  DONE-gate-phase1-gate.md  DONE-generators-orchestrator.md  DONE-generators-xml-articole-contabile.md  DONE-generators-xml-invoices.md  DONE-generators-xml-payments.md  DONE-generators-xml-terti-articole.md  DONE-mappers-ai-usage.md  DONE-mappers-cache.md  DONE-mappers-haiku.md  DONE-mappers-rule-based.md  DONE-parsers-paradox.md  DONE-parsers-registry.md  DONE-parsers-winmentor.md  DONE-remediation-fonts.md  DONE-remediation-pipeline.md  DONE-reports-json.md  DONE-reports-pdf.md  GATE.md  JOB.md  REQUIREMENTS.md
jobs/phase2-nuxt/: DONE-admin-user-detail-payments.md  DONE-api-admin-ai.md  DONE-api-admin-jobs-actions.md  DONE-api-admin-jobs-detail.md  DONE-api-admin-jobs-list.md  DONE-api-admin-misc.md  DONE-api-admin-payments.md  DONE-api-admin-stats.md  DONE-api-admin-users.md  DONE-api-jobs-4b-download-resync.md  DONE-api-jobs-create.md  DONE-api-jobs-discover.md  DONE-api-jobs-events-sse.md  DONE-api-jobs-get.md  DONE-api-jobs-mapping.md  DONE-api-jobs-pay.md  DONE-api-jobs-upload.md  DONE-api-webhooks-stripe.md  DONE-auth-admin-logout.md  DONE-auth-admin-session.md  DONE-auth-anonymous-token.md  DONE-auth-google-callback.md  DONE-auth-google-start.md  DONE-auth-job-access.md  DONE-auth-magic-link-request.md  DONE-auth-magic-link-verify.md  DONE-auth-session-util.md  DONE-bootstrap-drizzle.md  DONE-bootstrap-env.md  DONE-bootstrap-fonts.md  DONE-bootstrap-nuxt.md  DONE-bootstrap-primitives.md  DONE-bootstrap-shadcn-setup.md  DONE-bootstrap-theme.md  DONE-pages-admin-ai-profiles.md  DONE-pages-admin-jobs.md  DONE-pages-admin-misc.md  DONE-pages-admin-payments.md  DONE-pages-admin-users.md  DONE-refund-reversal.md  (+52 more)
jobs/upload-progress/: DONE-xhr-progress.md
worker/: .dockerignore  .gitignore  Dockerfile  PG_BOSS_NOTES.md  README.md  pyproject.toml
worker/migrations/: 001_worker_bootstrap.sql
worker/src/migrator/: cli.py  consumer.py  pipeline.py
worker/src/migrator/canonical/: article.py  journal.py  partner.py  support.py
worker/src/migrator/generators/: __init__.py  orchestrator.py  saga_xml_articole_contabile.py  saga_xml_invoices.py  saga_xml_payments.py  saga_xml_terti_articole.py
worker/src/migrator/mappers/: ai_assisted.py  cache.py  rule_based.py  usage.py
worker/src/migrator/parsers/: paradox.py  registry.py  winmentor.py
worker/src/migrator/reports/: conversion_report_json.py  conversion_report_pdf.py
worker/src/migrator/reports/fonts/: LICENSE.txt
worker/src/migrator/utils/: archive.py  db.py  logger.py
(+132 files in other folders)
